[gd_scene load_steps=31 format=3 uid="uid://d2cian18j7oal"]

[ext_resource type="Script" uid="uid://cyhaw1qyjtrhn" path="res://blisscode/character/character_controller.gd" id="1_ct1yt"]
[ext_resource type="Script" uid="uid://d2lsy2pdynjo3" path="res://blisscode/character/controls/player_controls.gd" id="2_gskn5"]
[ext_resource type="Resource" uid="uid://c8484mdisoydj" path="res://scenes/characters/player/character_data/player_top_down.tres" id="2_ns5k8"]
[ext_resource type="Texture2D" uid="uid://dedt50bk68mug" path="res://assets/img/characters/mech/mech-1-export.png" id="4_40a7k"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://bwp3hqywp4err" path="res://scenes/characters/player/animations/player_walk_states.tres" id="4_u8i4y"]
[ext_resource type="PackedScene" uid="uid://qduhqb6f8ovy" path="res://scenes/characters/ui/character_points_bar.tscn" id="5_40a7k"]
[ext_resource type="Script" uid="uid://lgy6ppfw7o2d" path="res://blisscode/character/animation/animation_tree_resolver.gd" id="5_ns5k8"]
[ext_resource type="Script" uid="uid://c3p304lbhwxnt" path="res://blisscode/character/animation/sprite_facing_direction.gd" id="5_u8i4y"]
[ext_resource type="PackedScene" uid="uid://c37f3qdvli5sr" path="res://blisscode/character/alignment/alignment.tscn" id="6_87p8f"]
[ext_resource type="Script" uid="uid://c30av3xht06qh" path="res://blisscode/character/debug_label.gd" id="7_t0bne"]
[ext_resource type="Texture2D" uid="uid://yfinwvdrgjhy" path="res://assets/img/ui/icons/red-arrow.png" id="8_drmhd"]
[ext_resource type="Texture2D" uid="uid://iy021d8gnrks" path="res://assets/img/cursors/crosshairs.png" id="9_xu12o"]
[ext_resource type="Texture2D" uid="uid://bxqd1qybg36cl" path="res://assets/img/cursors/circle.png" id="10_iwjv8"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="11_k24dq"]
[ext_resource type="Script" uid="uid://chigi4pyju8x5" path="res://scenes/characters/player/player_camera.gd" id="12_xx0wh"]
[ext_resource type="Script" uid="uid://crd4jahwgh6t2" path="res://blisscode/state_machine/states/topdown_state_machine.gd" id="16_t0bne"]
[ext_resource type="Script" uid="uid://c3cee20gbao6c" path="res://blisscode/state_machine/states/move_state.gd" id="17_drmhd"]
[ext_resource type="Script" uid="uid://bnn0ai7ycx13p" path="res://blisscode/state_machine/states/dash_state.gd" id="18_xu12o"]
[ext_resource type="Texture2D" uid="uid://dl5ed1afrnnhn" path="res://assets/img/masks/LightMask.png" id="19_drmhd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wocps"]
size = Vector2(13, 16)

[sub_resource type="Animation" id="Animation_vmatd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_apbv3"]
resource_name = "idle_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_po7bs"]
resource_name = "idle_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_xokow"]
resource_name = "idle_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_ohvsh"]
resource_name = "walk_down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_67j34"]
resource_name = "walk_right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [6, 7, 8]
}

[sub_resource type="Animation" id="Animation_5b8nr"]
resource_name = "walk_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wudon"]
_data = {
&"RESET": SubResource("Animation_vmatd"),
&"idle_down": SubResource("Animation_apbv3"),
&"idle_right": SubResource("Animation_po7bs"),
&"idle_up": SubResource("Animation_xokow"),
&"walk_down": SubResource("Animation_ohvsh"),
&"walk_right": SubResource("Animation_67j34"),
&"walk_up": SubResource("Animation_5b8nr")
}

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_apbv3"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_xokow"]
nodes/PlayerStates/node = ExtResource("4_u8i4y")
nodes/PlayerStates/position = Vector2(-200, 120)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_apbv3")
nodes/TimeScale/position = Vector2(100, 120)
node_connections = [&"output", 0, &"TimeScale", &"TimeScale", 0, &"PlayerStates"]

[node name="PlayerTopdown" type="CharacterBody2D" node_paths=PackedStringArray("controls") groups=["persist", "player"]]
collision_mask = 260
motion_mode = 1
script = ExtResource("1_ct1yt")
character = ExtResource("2_ns5k8")
controls = NodePath("PlayerControls")

[node name="PlayerControls" type="Node" parent="." node_paths=PackedStringArray("state_machine", "aim_sprite", "touch_sprite")]
script = ExtResource("2_gskn5")
state_machine = NodePath("../TopdownStateMachine")
aim_sprite = NodePath("../Crosshairs")
touch_sprite = NodePath("../TouchCircle")
metadata/_custom_type_script = "uid://d2lsy2pdynjo3"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_wocps")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_40a7k")
hframes = 3
vframes = 3
frame = 1

[node name="SpriteFacingDirection" type="Node2D" parent="." node_paths=PackedStringArray("agent", "sprite")]
script = ExtResource("5_u8i4y")
agent = NodePath("..")
sprite = NodePath("../Sprite2D")
metadata/_custom_type_script = "uid://c3p304lbhwxnt"

[node name="AnimationTreeResolver" type="Node" parent="." node_paths=PackedStringArray("agent", "animation_tree")]
script = ExtResource("5_ns5k8")
agent = NodePath("..")
animation_tree = NodePath("../AnimationTree")
metadata/_custom_type_script = "uid://lgy6ppfw7o2d"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wudon")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_xokow")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/PlayerStates/Idle/blend_position = Vector2(0, 0)
parameters/PlayerStates/Walk/blend_position = Vector2(0, 0)
parameters/TimeScale/scale = 2.0

[node name="TopdownStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "initial_state")]
script = ExtResource("16_t0bne")
character = NodePath("..")
initial_state = NodePath("MoveState")

[node name="MoveState" type="Node" parent="TopdownStateMachine"]
script = ExtResource("17_drmhd")
metadata/_custom_type_script = "uid://c3cee20gbao6c"

[node name="DashState" type="Node" parent="TopdownStateMachine"]
script = ExtResource("18_xu12o")
metadata/_custom_type_script = "uid://bnn0ai7ycx13p"

[node name="CharacterPointsBar" parent="." instance=ExtResource("5_40a7k")]
visible = false
offset_top = -29.0
offset_bottom = 11.0

[node name="Alignment" parent="." instance=ExtResource("6_87p8f")]
visible = false
position = Vector2(-10, -23)

[node name="DebugLabel" type="Label" parent="." node_paths=PackedStringArray("controls")]
visible = false
offset_left = -10.0
offset_top = -72.0
offset_right = 30.0
offset_bottom = -40.0
theme_override_constants/line_spacing = -9
theme_override_font_sizes/font_size = 16
text = "Position"
script = ExtResource("7_t0bne")
controls = NodePath("../PlayerControls")

[node name="DirectionArrow" type="TextureRect" parent="."]
visible = false
offset_left = 23.0
offset_top = -9.0
offset_right = 39.0
offset_bottom = 7.0
texture = ExtResource("8_drmhd")

[node name="Crosshairs" type="Sprite2D" parent="."]
position = Vector2(61, 0)
texture = ExtResource("9_xu12o")

[node name="TouchCircle" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("10_iwjv8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 4
layer = 30
visible = false

[node name="Move Virtual Joystick" parent="CanvasLayer" instance=ExtResource("11_k24dq")]
offset_left = 25.0
offset_top = -70.0
offset_right = 123.0
offset_bottom = 9.0
scale = Vector2(0.5, 0.5)
clampzone_size = 25.0
action_left = "move_left"
action_right = "move_right"
action_up = "move_up"
action_down = "move_down"

[node name="Aim Virtual Joystick" parent="CanvasLayer" instance=ExtResource("11_k24dq")]
anchors_preset = 3
anchor_left = 1.0
anchor_right = 1.0
offset_left = -74.0
offset_top = -71.0
offset_right = 24.0
offset_bottom = 8.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
clampzone_size = 25.0
action_left = "aim_left"
action_right = "aim_right"
action_up = "aim_up"
action_down = "aim_down"

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 1600
limit_bottom = 1600
position_smoothing_enabled = true
script = ExtResource("12_xx0wh")

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.5
shadow_enabled = true
texture = ExtResource("19_drmhd")
texture_scale = 3.0
